manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-nodejs-app
  template:
    metadata:
      labels:
        app: gitops-nodejs-app
    spec:
      containers:
      - name: gitops-nodejs-app
        image: nafisah25/gitops-nodejs-app:latest
        ports:
        - containerPort: 3000
