manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-nodejs-service
spec:
  selector:
    app: gitops-nodejs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
